deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cloud-native-app
  template:
    metadata:
      labels:
        app: cloud-native-app
    spec:
      containers:
      - name: app-container
        image: karthigaadevi12/cloud-native-app:latest
        ports:
        - containerPort: 8080
